# holoservice

./: .env.sample  README.md  main.py  nginx.conf.sample  pyproject.toml
api/: db.py  exceptions.py  main.py  middlewares.py  oauth2.py  setting.py  settings.py
api/configs/: .env.sample
api/repository/: schedule.py  streamer.py  user.py
api/routers/: authentication.py  schedule.py  streamer.py  user.py
api/schemas/: schedule.py  schedules.py  streamer.py  user.py
