[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Manabu Kikuchi <mkikuchi@imprex.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
motor = "^3.3.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
