[tool.poetry]
name = "holoservice"
version = "1.0.0"
description = "ホロジュールの配信情報を提供"
authors = ["kerobot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
motor = "^3.3.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
