[project]
name = "holoservice"
version = "0.1.0"
description = "ホロジュールの配信情報を提供"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "bcrypt>=4.0.0,<4.1.0",
    "fastapi>=0.139.2",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.6",
]
